# MLLE

./: .gitignore  .gitmodules  IdeaBucket.md  README.md  ReadMe.md  ctest.cpp  index.html  package-lock.json  package.json  setup_emsdk.bat
Datasets/: README.md
backend/: .gitignore  CMakeLists.txt  README.md  backend.js  backend.wasm  build.bat  main.cpp  package-lock.json  run.js  setup.bat  tensorflow_setup.bat
backend/src/: backend-worker.cjs  backend-worker.js  backend.cjs  backend.js  defaults.cjs  defaults.js  ffnn.js  model.cjs  model.js  regr_car.js  test-main.cjs  test-worker.cjs  test.cpp  test.js
backend/tensorflow/: package-lock.json  package.json
backend/test-env/: package-lock.json  package.json
backend/test-env/src/: App.jsx  model.js  worker.js
frontend/: README.md  index.html  localhost-key.pem  localhost.pem  package-lock.json  package.json  vite.config.js
frontend/cert/: README.md  localhost-key.pem  localhost.pem
frontend/public/datasets/: README.md  fashion-mnist_train.csv  health_dataset.csv  heart.csv  iris_dataset.csv  moons_dataset.csv  preprocessed_car_price_dataset.csv  spiral_dataset.csv  synthetic_normal_binary_classification.csv  synthetic_normal_binary_classification_500.csv  weather_dataset.csv
frontend/public/json/: README.md  finder.json  iriscsv1lyr1dn1rel.json  iriscsv1lyr3dn1rel.json  moonscsv1lyr1dn1rel.json  (+7 more)
frontend/src/: Welcome.css  Welcome.jsx  WelcomeButtons.css  WelcomeButtons.jsx  index.css  main.jsx
mlle-webapp/: .gitignore  package-lock.json  package.json
mlle-webapp/src/: App.jsx  wasm-loader.ts
(+45 files in other folders)
